--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -1,5 +1,4 @@
 #about {
-  margin-top: 25px;
   padding-bottom: 100px;
   position: relative;
   .about_content {
@@ -25,9 +24,12 @@
     .about_content_img_2 {
       width: 100%;
       height: 449px;
+        @media(max-width: 991px){
+          margin-bottom: 30px;
+        }
       img {
         width: 100%;
-        height: 449px;
+        height: 450px;
         object-fit: cover;
       }
     }
@@ -142,13 +144,14 @@
   .team_card {
     margin-top: 22px;
     .members_img {
-      width: 100%;
-      height: 475px;
       img {
         object-fit: cover;
         width: 100%;
         height: 475px;
-        z-index: 99999;
+        z-index: 9;
+        @media(max-width: 575px) {
+          height: 350px;
+        }
       }
     }
     .member_position {
