--- a/assets/scss/_works.scss
+++ b/assets/scss/_works.scss
@@ -4,6 +4,10 @@
   padding-bottom: 0;
 
   .work_content {
+
+    .portfolio_img {
+      margin-bottom: 100px;
+    }
     .tab-text {
       p {
         font-size: 16px;
@@ -56,17 +60,18 @@
   }
 
   .project_img {
-    width: 100%;
-    height: 400px;
-    overflow: hidden;
     img {
       width: 100%;
       height: 400px;
       object-fit: cover;
+     
     }
   }
 
   .project_info {
+    @media(max-width: 991px ){ 
+      margin-top: 16px;
+    }
     span {
       font-size: 12px;
       line-height: 14px;
