--- a/assets/scss/_details.scss
+++ b/assets/scss/_details.scss
@@ -1,117 +1,177 @@
-#details_slider{
-    margin-top: 50px;
-    padding-bottom: 100px;
-    .single-slider{
-        position: relative;
-        img{
-            width: 100%;
-            height: 791px;
-            object-fit: cover;
-        }
-    }
-    .project_title{
-        h2{
-            color: $black;
-            -webkit-text-stroke: inherit;
-            padding-top: 10px;
-            padding-bottom: 0;
-        }
-    }
-}
-#project_area{
-    padding-top: 90px;
-    padding-bottom: 75px;
-    .project_title_2{
-        h2{
-            color: $black;
-            font-size: 46px;
-            line-height: 55px;
-            font-family: $oswald;
-            font-weight: $semi_bold;
-            padding-bottom: 25px;
-        }
-    }
-    .project_wrapper{
-        .project_text{
-            p{
-                color: #7A849A;
-                font-size: 20px;
-                line-height: 44px;    padding-right: 230px;
-                margin: 0;
-            }
-        }
-        .project_button{
-            margin-top: 40px;
-            a{
-                margin-right: 45px;
-                color: #3E424B;
-                line-height: 14px;
-                font-size: 12px;
-                letter-spacing: 3px;
-                font-weight: 600;
-                text-transform: uppercase;
-            }
-        }
-    }
-    .our_role{
-        margin-bottom: 40px;
-        ul{
-            h4{
-                color: #3E424B;
-                font-size: 12px;
-                font-weight: 600;
-                line-height: 14px;
-                margin-bottom: 10px;
-            }
-            li{
-                font-size: 16px;
-                color: #7A849A;
-                line-height: 24px;
-                padding-bottom: 5px;
+#details_slider {
+	margin-top: 50px;
+	padding-bottom: 100px;
+	position: relative;
+	@media (max-width: 991px) {
+		margin-top: 0;
+	}
+	.single-slider {
+		position: relative;
+		img {
+			width: 100%;
+			height: 791px;
+			object-fit: cover;
 
-            }
-        }
-    }
-    .our_role_img{
-        width: 100%;
-        height: 363px;
-        img{
-            width: 100%;
-            height: 363px;
-            object-fit: cover;
-        }
-    }
-}
-#details_project{
-    padding-top: 75px;
-    padding-bottom: 100px;
-    .project_info {
-        span {
-            font-size: 12px;
-            line-height: 14px;
-            color: #7a849a;
-        }
-
-        h3 {
-            color: #3e424b;
-            font-size: 46px;
-            font-weight: 600;
-            font-family: 'Oswald', sans-serif;
-            padding-bottom: 42px;
-            line-height: 55px;
-            margin: 0;
-        }
-
-        .v_project {
-            color: $black;
-            line-height: 14px;
-            font-size: 12px;
-            letter-spacing: 3px;
-            font-weight: $semi_bold;
-            text-transform: uppercase;
-        }
-    }
+			@media (max-width: 1024px) {
+				max-width: 100%;
+				height: auto;
+			}
+		}
+	}
+	.project_title {
+		h2 {
+			color: $black;
+			-webkit-text-stroke: inherit;
+			padding-top: 10px;
+			padding-bottom: 0;
+			@media (max-width: 767px) {
+				font-size: 8vw;
+			}
+		}
+	}
+	.slick-arrow {
+		position: absolute;
+		z-index: 9;
+		top: 50%;
+		background: $gray;
+		width: 30px;
+		height: 30px;
+		line-height: 30px;
+		text-align: center;
+		color: #fff;
+		transition: all 0.3s linear;
+		opacity: 0.6;
+		&.next-arrow {
+			right: 0;
+		}
+		&.prev-arrow {
+			left: 0;
+		}
+		&:active {
+			transform: scale(0.9);
+		}
+		&:hover {
+			opacity: 1;
+		}
+	}
 }
 
+#project_area {
+	padding-top: 90px;
+	padding-bottom: 75px;
+	.project_title_2 {
+		h2 {
+			color: $black;
+			font-size: 46px;
+			line-height: 55px;
+			font-family: $oswald;
+			font-weight: $semi_bold;
+			padding-bottom: 25px;
+			@media (max-width: 575px) {
+				font-size: 8vw;
+			}
+		}
+	}
+	.project_wrapper {
+		.project_text {
+			p {
+				color: #7a849a;
+				font-size: 20px;
+				line-height: 44px;
+				padding-right: 230px;
+				margin: 0;
+				@media (max-width: 991px) {
+					padding-right: 0px;
+				}
+				@media (max-width: 767px) {
+					font-size: 16px;
+					line-height: 32px;
+				}
+			}
+		}
+		.project_button {
+			margin-top: 40px;
+			a {
+				margin-right: 45px;
+				color: #3e424b;
+				line-height: 14px;
+				font-size: 12px;
+				letter-spacing: 3px;
+				font-weight: 600;
+				text-transform: uppercase;
+				@media (max-width: 767px) {
+					text-align: center;
+					width: 100%;
+				}
+			}
+		}
+	}
+	.our_role {
+		margin-bottom: 40px;
+		ul {
+			h4 {
+				color: #3e424b;
+				font-size: 12px;
+				font-weight: 600;
+				line-height: 14px;
+				margin-bottom: 10px;
+			}
+			li {
+				font-size: 16px;
+				color: #7a849a;
+				line-height: 24px;
+				padding-bottom: 5px;
+			}
+		}
+	}
+	.our_role_img {
+		width: 100%;
+		height: 363px;
+		img {
+			width: 100%;
+			height: 363px;
+			object-fit: cover;
+		}
+	}
+}
+#details_project {
+	padding-top: 75px;
+	padding-bottom: 100px;
+	.project_items {
+		@media (max-width: 767px) {
+			margin-bottom: 30px;
+		}
+		.project_info {
+			@media (max-width: 767px) {
+				padding-top: 18px;
+			}
+			p {
+				margin-bottom: 0;
+			}
+			span {
+				font-size: 12px;
+				line-height: 14px;
+				color: #7a849a;
+			}
 
+			h3 {
+				color: #3e424b;
+				font-size: 46px;
+				font-weight: 600;
+				font-family: 'Oswald', sans-serif;
+				padding-bottom: 42px;
+				line-height: 55px;
+				margin: 0;
+			}
 
+			.v_project {
+				color: $black;
+				line-height: 14px;
+				font-size: 12px;
+				letter-spacing: 3px;
+				font-weight: $semi_bold;
+				text-transform: uppercase;
+			}
+		}
+	}
+}
