--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,409 +1,313 @@
 header {
-  background-color: $white;
-  position: relative;
-  border-bottom: 2px solid $primary;
-  position: sticky;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  z-index: 999;
- 
-  .container {
-    .head_content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      height: 90px;
-      .logo{
-        font-family: 'Rajdhani', sans-serif;
-        text-transform: uppercase;
-        font-weight: bold;
-        font-size: 24px;
-        line-height: 38px;
-        a {
-          color: $black;
-          span {
-            color: $primary;
-          }
-        }
-        img{
-          @media(max-width: 525px) {
-            width: 190px;
-          }
-        }
-      }
-      .menu {
-        display: flex;
-        align-items: center;
-        &.active{
-          .m_bar{
-            &::after{
-              content: 'close';
-              color: #fff;
-            }
-           
-            li{
-              transform: matrix(-0.71, 0.71, -0.71, -0.71, -5, -8);
-              background-color: #fff;
-              &:first-child {
-                transform: matrix(0.71, 0.71, -0.71, 0.71, -6, 3);
-              }
-            }
-          }
-        }
-        .m_bar {
-          cursor: pointer;
-          transition: all 0.4s ease-in-out;
-          position: relative;
-          line-height: 25px;
-          &::after {
-            content: 'Menu';
-            position: absolute;
-            left: -43px;
-            top: -6px;
-            font-size: 12px;
-            font-weight: 600;
-            text-transform: uppercase;
-          }
-          li {
-            width: 24px;
-            height: 3px;
-            background-color: $black;
-            transition: all 0.4s ease-in-out;
+	background-color: $white;
+	position: relative;
+	border-bottom: 2px solid $primary;
+	position: sticky;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	z-index: 999;
 
-            &:first-child {
-              margin-bottom: 9px;
-            }
-          }
-        }
-      }
-    }
-  }
+	.container {
+		.head_content {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			height: 90px;
+			.logo {
+				font-family: 'Rajdhani', sans-serif;
+				text-transform: uppercase;
+				font-weight: bold;
+				font-size: 24px;
+				line-height: 38px;
+				a {
+					color: $black;
+					span {
+						color: $primary;
+					}
+				}
+				img {
+					@media (max-width: 525px) {
+						width: 140px;
+					}
+				}
+			}
+			.menu {
+				display: flex;
+				align-items: center;
+				&.active {
+					.m_bar {
+						&::after {
+							content: 'close';
+							color: #fff;
+						}
+
+						li {
+							transform: matrix(
+								-0.71,
+								0.71,
+								-0.71,
+								-0.71,
+								-5,
+								-8
+							);
+							background-color: #fff;
+							&:first-child {
+								transform: matrix(
+									0.71,
+									0.71,
+									-0.71,
+									0.71,
+									-6,
+									3
+								);
+							}
+						}
+					}
+				}
+				.m_bar {
+					cursor: pointer;
+					transition: all 0.4s ease-in-out;
+					position: relative;
+					line-height: 25px;
+					&::after {
+						content: 'Menu';
+						position: absolute;
+						left: -43px;
+						top: -6px;
+						font-size: 12px;
+						font-weight: 600;
+						text-transform: uppercase;
+					}
+					li {
+						width: 24px;
+						height: 3px;
+						background-color: $black;
+						transition: all 0.4s ease-in-out;
+
+						&:first-child {
+							margin-bottom: 9px;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 .fullscreen-menu {
-  min-width: 100vw;
-  height: 100vh;
-  min-height: 800px;
-  background-color: $black;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-  display: none;
-  &.active{
-    display: block;
-  }
-  .menu {
-    &-body{
-      min-height: 75vh;
-      @media(max-width: 767px){
-        min-height: 70vh;
-      }
-      .menu-container {
-        min-height: 75vh;
-        @media(max-width: 767px){
-          min-height: 70vh;
-        }
-        display: flex;
-        flex-wrap: wrap;
-        align-items: stretch;
-        align-content: stretch;
-      }
-      .menu-close {
-        display: flex;
-        align-items: center;
-        padding-top: 39px;
-        justify-content: flex-end;
-        width: 100%;  
-        height: 20px;
-        .close-bar {
-          cursor: pointer;
-          transition: all 0.4s ease-in-out;
-          position: relative;
-          line-height: 25px;
-          &::after {
-            content: 'close';
-            position: absolute;
-            left: -43px;
-            top: -5px;
-            font-size: 12px;
-            font-weight: 600;
-            text-transform: uppercase;
-            color: $white;
-          }
-          li {
-            width: 24px;
-            height: 3px;
-            background-color: $white;
-            transition: all 0.4s ease-in-out;
-            transform: matrix(-0.71, 0.71, -0.71, -0.71, 0, -4);
+	min-width: 100vw;
+	height: 100vh;
+	min-height: 800px;
+	background-color: $black;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 9999;
+	display: none;
+	&.active {
+		display: block;
+	}
+	.menu {
+		&-body {
+			min-height: 75vh;
+			@media (max-width: 767px) {
+				min-height: 70vh;
+			}
+			.menu-container {
+				min-height: 75vh;
+				@media (max-width: 767px) {
+					min-height: 70vh;
+				}
+				display: flex;
+				flex-wrap: wrap;
+				align-items: stretch;
+				align-content: stretch;
+			}
+			.menu-close {
+				display: flex;
+				align-items: center;
+				padding-top: 39px;
+				justify-content: flex-end;
+				width: 100%;
+				height: 20px;
+				.close-bar {
+					cursor: pointer;
+					transition: all 0.4s ease-in-out;
+					position: relative;
+					line-height: 25px;
+					&::after {
+						content: 'close';
+						position: absolute;
+						left: -43px;
+						top: -5px;
+						font-size: 12px;
+						font-weight: 600;
+						text-transform: uppercase;
+						color: $white;
+					}
+					li {
+						width: 24px;
+						height: 3px;
+						background-color: $white;
+						transition: all 0.4s ease-in-out;
+						transform: matrix(-0.71, 0.71, -0.71, -0.71, 0, -4);
 
-            &:first-child {
-              margin-bottom: 7px;
-              transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 6);
-            }
-          }
-        }
-      }
-      .main-menu {
-        ul {
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: space-evenly;
-          li {
-            margin-bottom: 45px;
-            a {
-              font-size: 84px;
-              line-height: 110px;
-              font-weight: bold;
-              font-family: $oswald;
-              padding: 0 48px;
-              color: $white;
-              position: relative;
-              span {
-                visibility: hidden;
-                position: absolute;
-                top: 0;
-                left: 50%;
-                transform: translateX(-50%);
-                font-family: $poppins;
-                font-size: 24px;
-                line-height: 28px;
-                font-weight: 600;
-              }
-              &.active, &:hover {
-                color: transparent;
-                -webkit-text-stroke: 1.5px #7a849a;
-                span {
-                  visibility: visible;
-                  color: white;
-                  -webkit-text-stroke: 0;
-                }
-              }
-              @media(max-width: 991px) and (min-width: 768px){
-                font-size: 60px;
-                line-height: 70px;
-                padding: 0 40px;
-              }
-              @media(max-width: 767px){
-                font-size: 35px;
-                line-height: 45px;
-                padding: 0 26px;
-                width: 100%;
-                span {
-                  top: -8px;
-                  left: 50%;
-                  font-size: 16px;
-                  line-height: 25px;
-                }
-              }
-              @media(max-width: 574px){
-                font-size: 30px;
-                line-height: 35px;
-                padding: 0 20px;
-                width: 100%;
-                span {
-                  font-size: 14px;
-                  line-height: 20px;
-                }
-              }
-            }
-            @media(max-width: 767px){
-              width: 100%;
-              text-align: center;
-              margin-bottom: 25px;
-            }
-            @media(max-width: 574px){
-              margin-bottom: 20px;
-            }
-          }
-        }
-      }
-    }
-    &-footer {
-      height: 25vh;
-      background-color: $white;
-      padding: 20px 0;
-      box-sizing: border-box;
-      @media(max-width: 767px){
-        height: 30vh;
-      }
-      .footer-social {
-        width: 100%;
-        min-height: calc(25vh - 63px);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        li a {
-          display: inline-block;
-          color: $black;
-          font-size: 20px;
-          width: 50px;
-          height: 50px;
-          line-height: 50px;
-          text-align: center;
-          border-radius: 50%;
-          color: $black;
-          position: relative;
-          z-index: 1;
-          transition: all 0.3s linear 0.2s;
-          &::after {
-            content: '';
-            position: absolute;
-            width: 50px;
-            height: 50px;
-            top: 0;
-            left: 0;
-            z-index: -1;
-            border-radius: 50%;
-            transform: scale(0);
-            transition-delay: 0.3s;
-            transition: all 0.3s linear;
-          }
-          &:hover {
-            color: $white;
-            &::after {
-              transform: scale(1);
-              background-color: $primary;
-            }
-          }
-        }
-      }
-      .copyright-text {
-        width: 100%;
-        text-align: center;
-        height: 23px;
-      }
-    }
-  }
+						&:first-child {
+							margin-bottom: 7px;
+							transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 6);
+						}
+					}
+				}
+			}
+			.main-menu {
+				ul {
+					display: flex;
+					flex-wrap: wrap;
+					justify-content: space-evenly;
+					li {
+						margin-bottom: 45px;
+						a {
+							font-size: 84px;
+							line-height: 110px;
+							font-weight: bold;
+							font-family: $oswald;
+							padding: 0 48px;
+							color: $white;
+							position: relative;
+							span {
+								visibility: hidden;
+								position: absolute;
+								top: 0;
+								left: 50%;
+								transform: translateX(-50%);
+								font-family: $poppins;
+								font-size: 24px;
+								line-height: 28px;
+								font-weight: 600;
+							}
+							&.active,
+							&:hover {
+								color: transparent;
+								-webkit-text-stroke: 1.5px #7a849a;
+								span {
+									visibility: visible;
+									color: white;
+									-webkit-text-stroke: 0;
+								}
+							}
+							@media (max-width: 991px) and (min-width: 768px) {
+								font-size: 60px;
+								line-height: 70px;
+								padding: 0 40px;
+							}
+							@media (max-width: 767px) {
+								font-size: 35px;
+								line-height: 45px;
+								padding: 0 26px;
+								width: 100%;
+								span {
+									top: -8px;
+									left: 50%;
+									font-size: 16px;
+									line-height: 25px;
+								}
+							}
+							@media (max-width: 574px) {
+								font-size: 30px;
+								line-height: 35px;
+								padding: 0 20px;
+								width: 100%;
+								span {
+									font-size: 14px;
+									line-height: 20px;
+								}
+							}
+						}
+						@media (max-width: 767px) {
+							width: 100%;
+							text-align: center;
+							margin-bottom: 25px;
+						}
+						@media (max-width: 574px) {
+							margin-bottom: 20px;
+						}
+					}
+				}
+			}
+		}
+		&-footer {
+			height: 25vh;
+			background-color: $white;
+			padding: 20px 0;
+			box-sizing: border-box;
+			@media (max-width: 767px) {
+				height: 30vh;
+			}
+			.footer-social {
+				width: 100%;
+				min-height: calc(25vh - 63px);
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				li a {
+					display: inline-block;
+					color: $black;
+					font-size: 20px;
+					width: 50px;
+					height: 50px;
+					line-height: 50px;
+					text-align: center;
+					border-radius: 50%;
+					color: $black;
+					position: relative;
+					z-index: 1;
+					transition: all 0.3s linear 0.2s;
+					@media (max-width: 575px) {
+						width: 40px;
+						height: 40px;
+						line-height: 40px;
+					}
+					&::after {
+						content: '';
+						position: absolute;
+						width: 50px;
+						height: 50px;
+						top: 0;
+						left: 0;
+						z-index: -1;
+						border-radius: 50%;
+						transform: scale(0);
+						transition-delay: 0.3s;
+						transition: all 0.3s linear;
+						@media (max-width: 575px) {
+							width: 40px;
+							height: 40px;
+						}
+					}
+					&:hover {
+						color: $white;
+						&::after {
+							transform: scale(1);
+							background-color: $primary;
+						}
+					}
+				}
+			}
+			.copyright-text {
+				width: 100%;
+				text-align: center;
+				height: 23px;
+				@media (max-width: 575px) {
+					margin-top: 30px;
+				}
+			}
+		}
+	}
 }
 
-// .menu_content {
-//   pointer-events: none;
-//   height: 0;
-//   position: relative;
-//   clip-path: circle(100px at 120% -10%);
-//   transition: all 1.2s linear;
-//   overflow: hidden;
-//   &.open {
-//     height: 100%;
-//     pointer-events: all;
-//     clip-path: circle(2200px at 0% -10%);
-//   }
-//   .top {
-//     background-color: $black;
-//     padding: 240px 0px;
-//     @media(max-width: 991px) {
-//       padding: 180px 0px;
-//     }
-//     .container {
-//       .nav_links {
-//         .nav_items {
-//           margin: 0px 49px;
-//           position: relative;
-//           display: inline-block;
-//           @media(max-width: 1200px){
-//             margin-bottom: 20px;
-//           }
-//           @media(max-width: 991px) {
-//             width: 100%;
-//             margin-left: 0px;
-//             margin-bottom: 60px;
-//           }
-
-//           &:first-child {
-//             margin-left: 0px;
-//           }
-//           &:last-child {
-//             margin-right: 0px;
-//           }
-
-//           &::after {
-//             position: absolute;
-//             top: 10px;
-//             right: 50%;
-//             font-size: 24px;
-//             font-weight: $semi_bold;
-//             color: $white;
-//           }
-//           a {
-//             font-size: 56px;
-//             line-height: 110px;
-//             color: $white;
-//             font-family: $oswald;
-//             text-transform: capitalize;
-//           }
-
-//           &:hover {
-//             a {
-//               color: transparent;
-//               -webkit-text-stroke: 1.5px $gray;
-//             }
-//             &:nth-child(1) {
-//               &::after {
-//                 content: '01';
-//               }
-//             }
-//             &:nth-child(2) {
-//               &::after {
-//                 content: '02';
-//               }
-//             }
-//             &:nth-child(3) {
-//               &::after {
-//                 content: '03';
-//               }
-//             }
-//             &:nth-child(4) {
-//               &::after {
-//                 content: '04';
-//               }
-//             }
-//             &:nth-child(5) {
-//               &::after {
-//                 content: '05';
-//               }
-//             }
-//           }
-//         }
-//       }
-//     }
-//   }
-//   .bottom {
-//     padding: 18px 0px;
-//     background-color: $white;
-//     @media(max-width: 991px) {
-//       padding: 90px 0px;
-//     }
-//     .container {
-//       .social_links {
-//         margin-top: 95px !important;
-//         li {
-//           &::after {
-//             transition: all 0.6s ease-in-out;
-//           }
-//           &:hover {
-//             z-index: 1;
-//           }
-//         }
-//       }
-//       .c_rights {
-//         text-align: center;
-//         margin-top: 80px;
-//         h5 {
-//           color: $black;
-//           font-size: 16px;
-//           line-height: 32px;
-//           font-weight: 600;
-//         }
-//       }
-//     }
-//   }
-// }
-
 .none {
-  &.active {
-    display: none;
-  }
+	&.active {
+		display: none;
+	}
 }
